--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "koa-history-api",
   "version": "1.0.0",
   "description": "Koa simplified version of connect-history-api-fallback",
-  "keyswords": [
+  "keywords": [
     "connect",
     "html5",
     "history api"
